Bug 64075 - Opening SVG within Draw Shows Empty Document
Summary: Opening SVG within Draw Shows Empty Document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.5.4 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: filter:svg target:4.5.0
Keywords:
Depends on:
Blocks: SVG-Import SVG-Open
  Show dependency treegraph
 
Reported: 2013-04-30 08:45 UTC by Gerry
Modified: 2015-02-19 03:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Wrong-insert-in-LO4-and-no-import-at-all-SVG-File.svg (166.46 KB, image/svg+xml)
2013-04-30 08:45 UTC, Gerry
Details
Screenshot for the svg in the first attachment. (115.90 KB, image/png)
2013-08-28 19:14 UTC, Christina Rossmanith
Details
screenshot-wrong-import-africa-map.png (122.87 KB, image/png)
2013-11-27 14:10 UTC, Gerry
Details
homenet svg (23.66 KB, image/svg+xml)
2014-12-18 00:13 UTC, NoOp
Details
LO screenshot (90.64 KB, image/png)
2014-12-18 00:13 UTC, NoOp
Details
AOO screenshot (91.03 KB, image/png)
2014-12-18 00:14 UTC, NoOp
Details
Scribus screenshot (104.47 KB, image/png)
2014-12-18 00:15 UTC, NoOp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerry 2013-04-30 08:45:01 UTC
Created attachment 78637 [details]
Wrong-insert-in-LO4-and-no-import-at-all-SVG-File.svg

Attached SVG file could be inserted (Insert->Picture->From File) nicely in LO 3.6.2.2. In LO 4.0x it is imported just black. The result is not usable at all.

Importing said SVG file (File->Open) does not work with any LibreOffice version. It displays just an empty Draw window after import.

System: Ubuntu 12.10
Comment 1 Joel Madero 2013-05-01 02:48:38 UTC
For this one let's just focus on the second issue  as I've already bibisected the other one and it is a regression.

For this one - as far as I can tell it is NOT a regression. I can confirm all the way back to 3.5.4 release - updating version to reflect this.

I have been able to confirm the issue on:
Version 3.5.4 bibisecting it 
Platform: Bodhi Linux 2.2 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
As I've been able to confirm this problem on an earlier release I am changing the version number as version is the earliest version that we can confirm the bug, we use comments to say that the bug exists in newer versions as well.

Marking as:

New (confirmed)
Normal - can prevent high quality work
High - apparently svg import is very broken, a key aspect of draw is being able to import images including SVG which we support

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Christina Rossmanith 2013-08-28 19:14:18 UTC
Created attachment 84811 [details]
Screenshot for the svg in the first attachment.

The map is rendered fine (Insert->picture from file) but no highlighting of countries for mouse-over.

Version: 4.2.0.0.alpha0+
Build ID: d00e125cbe33da88b881d177cbc09a9045d32349
Comment 3 Gerry 2013-11-27 14:09:22 UTC
Tested the SVG in LibreOffice 4.2 Beta 1 (Ubuntu 13.04) and the problem is still there. Contrary to Christina's testing, I still can confirm following problems:

Open SVG file (in Draw): The result is an white empty document. Nothing is visible. There is actually a white empty frame with the size 13.89cm x 13.21cm.  

Insert Image (SVG) in Writer: The result looks funny. The map is almost correctly imported, but there are many big black dots which should not exist. Please see the screenshot.
Comment 4 Gerry 2013-11-27 14:10:03 UTC
Created attachment 89899 [details]
screenshot-wrong-import-africa-map.png
Comment 5 V Stuart Foote 2014-04-30 08:36:40 UTC
On windows 7 sp1, 64-bit
confirm remains an issue with
Version: 4.3.0.0.alpha1+
Build ID: 0b03f7ed575838f90e6b1ebec3538a3a214f81fb
TinderBox: Win-x86@39, Branch:master, Time: 2014-04-30_01:30:46

The SVG opens as a blank white background image in Draw.

When inserted as file -> image is visible. As in comment 3, a number of objects are present in the SVG when reviewed in Inkscape, but are not visible. When inserted as an image they become visible as large dots.
Comment 6 NoOp 2014-12-18 00:12:42 UTC
Still present in 
Version: 4.3.4.1
Build ID: bc356b2f991740509f321d70e4512a6a54c5f243

Attachments: 
- homenet.svg (small network svg file)
- ScreenshotLO431SVGfileopen.png (LO 4.3.4.1 screenshot)
- ScreenshotAOO411svgfileopen.png (AOO 4.1.1 screenshot)
- ScreenshotScribus142SVGfileopen.png (Scribus 1.4.2 screenshot)

File|Open|homenet.svg
SVG drawing opens with only node and link outlines - color & text is missing completely.
Comment 7 NoOp 2014-12-18 00:13:23 UTC
Created attachment 110968 [details]
homenet svg
Comment 8 NoOp 2014-12-18 00:13:57 UTC
Created attachment 110969 [details]
LO screenshot
Comment 9 NoOp 2014-12-18 00:14:31 UTC
Created attachment 110970 [details]
AOO screenshot
Comment 10 NoOp 2014-12-18 00:15:46 UTC
Created attachment 110971 [details]
Scribus screenshot
Comment 11 NoOp 2014-12-18 01:44:40 UTC
Also tested with
Version: 4.2.8.2
Build ID: 48d50dbfc06349262c9d50868e5c1f630a573ebd
same result.
Comment 12 vvort 2015-02-13 14:00:18 UTC
Here is the fix for empty document problem:
https://gerrit.libreoffice.org/14475
Comment 13 Commit Notification 2015-02-18 23:19:15 UTC
Vort committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ea91563683b5c5df40ec5f4eb9c3005d7bfcf71d

tdf#64075 SVG Import: close non-closed filled polygons

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 V Stuart Foote 2015-02-19 03:11:22 UTC
Confirmed, polygon elements of the SVG are now visible-- thanks Vort A.

But we still can have color style issues for malformed SVG that would otherwise not show--but show in all black--as result of work on

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0cfd49dc530574cbbc0a95c173de8936bc9c8ca

for tdf#87309: SVG - use black as default currentColor if no color was specified.