tdf#64075 SVG Import: close non-closed filled polygons

Change-Id: I26335c88cd3fd6644e122c8c525bf319cb09f4db